--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016.12.26 ver2.8.3 - Added iteration at the beginning of draw_fc_cairo();
+	            - small bug fix.
+
 2016.12.26 ver2.8.2 - Added object search in finding chart (cia SIMBAD).
 	            - Standard and Object in FC tree windows are unified
 	              into the main object treeview (using tab).
