--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,1 @@
-Akito Tajitsu (tajitsu@subaru.naoj.org)
-Subaru Telescope, National Astronomical Observatory of Japan
-Support Scientist (HDS/Suprime-Cam)    Tel: +1-808-934-5944
-650 North A'ohoku Pl., Hilo, HI 96720, United States
+Akito Tajitsu (tajitsu_at_naoj.org)
