--- a/README.jp
+++ b/README.jp
@@ -5,7 +5,7 @@
 #                                                                         
 #                                  ver 2.8.5    2016/12/27                 
 #                               Copyright (C) 2003-16 Akito Tajitsu       
-#                                                  tajitsu@naoj.org       
+#                                               tajitsu_at_naoj.org       
 #########################################################################
 
 
@@ -41,6 +41,7 @@ ver2.8以降が必要、推奨はver2.10以降となります。
   - アーカイブを展開して作成されたディレクトリに移動
 
   - % ./configure  (--with-xmlrpc : 望遠鏡ステータスをとる場合)
+         (aclocal関連で文句を言われたら ./autogen.sh  を試してみてください)
 
   - % make
 
