--- a/README.jp
+++ b/README.jp
@@ -40,6 +40,9 @@ ver2.8以降が必要、推奨はver2.10以降となります。
 ▼make
   - アーカイブを展開して作成されたディレクトリに移動
 
+  - (git からsourceをクローンしたときのみ)
+    % touch configure configure.ac aclocal.m4 Makefile.am Makefile.in
+
   - % ./configure  (--with-xmlrpc : 望遠鏡ステータスをとる場合)
          (aclocal関連で文句を言われたら ./autogen.sh  を試してみてください)
 
