--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.01.09 ver2.8.8 - Interactive search of SIMBAD querried object in FC.
+	              (Left click on searched objects).
+
 2017.01.05 ver2.8.7 - Added GALEX (Far/Near UV) and WISE (4ch) in FC.
 	            - Bug fix in SIMBAD ID seach for standard and FC objects.
                           '+' => "%2b"  and  ' ' => "%20"
