--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	              object list tree_view.
 	            - Added MAST Portal for web database access.
 	            - Adjusted focus movements amoung Obj.list, FC, and SkyMon.
+	            - Added FC,StdDB,FCDB information into printf_log.
 
 2017.01.09 ver2.8.8 - Interactive search of SIMBAD querried object in FC.
 	              (Left click on searched objects).
