--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017.02.10 ver2.8.10- Changed standard object names in esostd.h to same ones
+	              used in each catalogs.
+	            - Bug fix on standards' position calculation in SET mode.
+	            - Revised some all sky camera servers.
+	            - Change SIMBAD site to the USA mirror (harvard.edu)
+
 2017.01.11 ver2.8.9 - Bug fix about tree_view_set_focus in FC + database query.
 	            - Added "NED" for database query.
 	            - Layout change in FC window.
