--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-2017.02.10 ver2.8.10- Changed standard object names in esostd.h to same ones
+2017.02.01 ver2.8.10- Changed standard object names in esostd.h to same ones
 	              used in each catalogs.
 	            - Bug fix on standards' position calculation in SET mode.
 	            - Revised some all sky camera servers.
 	            - Change SIMBAD site to the USA mirror (harvard.edu)
 	            - Adjusted timeing of the progress bar timeout.
 	            - Removed GTK_WIDGET_REALIZE() in button_signal (skymon.c).
+	            - Adjusted initialization timing of telstat.
 
 2017.01.11 ver2.8.9 - Bug fix about tree_view_set_focus in FC + database query.
 	            - Added "NED" for database query.
