--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017.02.27 ver2.8.12- Set the maximum FOV (25arcmin=6000pix in web server) for
+	              PANSTARRS Finding Chart.
+	            - Added "Search Object" in the object tree, ignoring
+	              upper/lower case in search text.
+
 2017.02.23 ver2.8.11- Added PanSTARRS-1 (color/g/r/i/z/y) for Finding Chart.
 	            - Updated Finding Charts' URLs for SDSS(R13).
 	            - Changed HTTP ver 1.0 -> 1.1 for FCDB/STDDB (xml) access.
