--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2017.03.07 ver2.8.13- Adjusted for MacOSX.
 	            - Revised expose-event callbacks for FC, Plot, AD,
 	              and SkyMon.
+	            - Fixed a bug in which the saved default FC source is not
+	              reflected correctly.
 
 2017.02.27 ver2.8.12- Set the maximum FOV (25arcmin=6000pix in web server) for
 	              PANSTARRS Finding Chart.
