--- a/README.jp
+++ b/README.jp
@@ -3,7 +3,7 @@
 #                         Document file
 #
 #
-#                                  ver 2.9.0     2017/03/20
+#                                  ver 2.9.1     2017/05/16
 #                               Copyright (C) 2003-17 Akito Tajitsu
 #                                               tajitsu_at_naoj.org
 #########################################################################
@@ -164,3 +164,31 @@ Objects unused in OPE file"を押してください。
 
 CSVテキストファイルの読み込みはメニューバーからできます。
 また起動時に-iオプションで指定することも可能です。
+
+
+▼著作権的話とか
+   The code in this distribution is Copyright 2003-2017 by Akito Tajitsu
+
+   このプログラムはフリーソフトウェアです。あなたはこれを、 Free Software　
+   Foundation によって発行されたGNU一般公衆利用許諾書 (バージョン2、
+   または(任意に)それ以降のバージョンのどちらか)の定める条件に従って、
+   これを再配布、そして(あるいは)修正することができます。
+
+   このプログラムは有用であることを願って配布されますが、*全くの無保証*です。
+   *商業可能性の保証*や*特定の目的への適合性*は、言外に示されたものも含め
+   全く存在しません。詳しくはGNU一般公衆利用許諾書をご覧ください。
+
+   あなたはこのプログラムとともにGNU一般公衆利用許諾書の複製を一部受け取った
+   はずです。もし受け取っていなければ、Free Software Foundationまで請求
+   してください(宛先は Free Software Foundation, Inc.,
+   51 Franklin St., Fifth Floor, Boston, MA 02110-1301 USA)。
+
+   加えて特別な例外として、A.TajitsuはこのプログラムのコードをOpenSSLライブ
+   ラリ(あるいはOpenSSLと同じライセンスが適用されたOpenSSLの改変された
+   バージョン)とリンクし、リンクされた両者を含む結合著作物を頒布する許可を
+   あたえます。
+   あなたはOpenSSL以外で使われているすべてのコードに関しては全面的にGNU一般
+   公衆利用許諾書に従わなければなりません。あなたがこのファイルを改変したな
+   らば、あなたはこのバージョンのファイルに引き続き設けることもできますが、
+   そうする義務はありません。もし例外を設けたくなければ、この例外条項をあな
+   たのバージョンからは削除してください。
