--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2017.06.01 ver2.9.3 - Added "Add Object" menu in main menu.
-	            - Added GAIA DR1 for database query in FC.
+	            - Added GAIA DR1/2MASS for database query in FC.
 	            - Revised unchunk code (g_malloc base).
 	            - Some adjustments for public release.
 	            - Adjusted for gtkmacintegration in OSX version to
