--- a/README.jp
+++ b/README.jp
@@ -3,7 +3,7 @@
 #                         Document file
 #
 #
-#                                  ver 2.9.2     2017/05/17
+#                                  ver 2.9.3     2017/06/01
 #                               Copyright (C) 2003-17 Akito Tajitsu
 #                                               tajitsu_at_naoj.org
 #########################################################################
@@ -13,30 +13,33 @@
 このプログラム(hskymon)は、すばる望遠鏡での観測および観測準備で使用す
 ることを目的とした天体位置のモニター用プログラムです。
 いちおう、すばるに特化している部分が多いですが、観測所の位置等のパラメー
-タを適切に設定すれば他の経緯台においても問題なく使用可能でしょう。
-天体リストの入力にはSOSs(すばる観測システム)準拠のOPE(観測手順書)ファ
+タを適切に設定すれば他の経緯台においても流用できる可能性があります。
+天体リストの入力にはGen2(すばる観測システム)準拠のOPE(観測手順書)ファ
 イルもしくは、CSVテキストのリストを使用できます。
 
-HDS Wiki (パスワードあり)
-    http://hds.skr.jp/wiki/
-にて最新版をダウンロード可能です。
-
-最新版sourceはGitHubからもダウンロードできます。ターミナルから  
+最新版release(source および Win/Mac用バイナリ)はGitHubからダウンロード
+できます。
+  https://github.com/chimari/hskymon/releases
+また、ターミナルから  
   git clone https://github.com/chimari/hskymon.git
-のコマンドで最新版のクローンをお使いの環境に作成します。
+のコマンドで最新版のsourceクローンをお使いの環境に作成できます。
 
 
 ▼環境
-X Window Systemが稼働しているUNIX環境。もしくは、MS Windows環境でも利
-用が可能です。
+X Window Systemが稼働しているUNIX環境、もしくは MS Windows/Mac OS環境
+でも利用が可能です。
+Win/Mac用にはバイナリー配布をしています。
 
-コンパイルするためにはGtk+が必要(Windows版はMinGW + Gtk-devを使用)です。
-Gtk+についてはcairoグラフィックライブラリを使用しているため、最低限
-ver2.8以降が必要、推奨はver2.10以降となります。
+sourceからコンパイルするためにはGtk+が必要(Windows版はmsys + Gtk-devを使用)
+です。
+Gtk+についてはcairoグラフィックライブラリを使用しているため、最低限ver2.8以降
+が必要、推奨はver2.10以降となります。
 libxml2とopensslも必要となります。
 
 Subaru Gen2と接続し、望遠鏡のステータスをとる場合(Gen2 summitネットワーク内
 のみで有効)はxmlrpc-cの開発環境が必要となります。
+ステータスサーバーのアドレス等については必要な場合のみ、観測所OCSグループへ
+問い合わせください。
 
 その他には特別なライブラリは必要としません。
 
@@ -76,7 +79,7 @@ make に関しては、各種ライブラリとそれに対応する開発環境が必要です。
 梱しています。最後のインストール先ディレクトリを適当に変更して使用して
 ください。
 
-Windows版の制限として、後述のXMLRPCに関する機能は現在ありません。
+Windows/Mac版の制限として、後述のXMLRPCに関する機能は現在ありません。
 
 
 ▼コマンドラインオプション
@@ -95,7 +98,7 @@ Windows版の制限として、後述のXMLRPCに関する機能は現在ありません。
 この場合  xmlrpc-c 関連のパッケージがインストールされている必要が
 あります。
  (xmlrpc-c, xmlrpc-c-devel 等)
-現在のところWindows版はこの機能には対応していません。
+現在のところWindows/Mac版はこの機能には対応していません。
 
 
 
@@ -159,7 +162,7 @@ Objects unused in OPE file"を押してください。
 注意するのは、RA/Dec をかならず秒の単位まで書き込むようにしてください。
 (f09.2, f+010.2 等の浮動小数点として読み込み処理しています)。
 天体名にはスペース等がふくまれても問題はありません。
-コメントはあってもなくてもかまいません。ない場合はEpochのあとのカンマ
+コメントはあってもなくてもかまいません。ない場合はEquinoxのあとのカンマ
 は必要ないです(あってもかまわない)。
 
 CSVテキストファイルの読み込みはメニューバーからできます。
