--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017.06.XX ver2.9.4 - Fixed a bug in unchunk() [Win32].
+2017.06.10 ver2.9.4 - Fixed a bug in unchunk() [Win32].
 	            - Chnaged vizier server to strasbourg (nao.ac.jp mirror
 	              could be troubled in the summit LAN).
 	            - Removed main_iteration(FALSE) in draw_fc_cairo
